--- a/style.css
+++ b/style.css
@@ -52,8 +52,16 @@ body {
     height: 50px;
     color: #252525;
     background-color: #fff;
+    border-radius: 12px;
+    padding: 16px;
+    font-size: 18px;
 }
 .btn {
-    
+    padding: 12px 24px;
+    border-radius: 20px;
+    color: #252525;
+    outline: none;
+    border: none;
+    font-size: 20px;
 }
 
