--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
     display: flex;
     justify-content: right;
     align-items: center;
-    margin-right: 120px;
-    background-color: #7339e1;
+    margin-right: 150px;
+    background-color: #1695fc;
     background-image: url(image/background.avif);
     background-repeat: no-repeat;
     background-size: cover;
@@ -20,11 +20,12 @@ body {
 }
 .container {
     width: 500px;
-    height: 400px;
+    height: 430px;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 70px;
     background: transparent;
     color: #fff;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -39,22 +40,31 @@ body {
     color: #fff;
     font-size: 34px;
 }
+.container h1 span {
+    color: #27ae60;
+}
 .input-box {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 40px;
-    padding: 50px 20px ;
-}
-#display {
+    /* padding: 50px 20px ; */
     width: 400px;
     height: 50px;
     color: #252525;
     background-color: #fff;
     border-radius: 12px;
-    padding: 16px;
     font-size: 18px;
+    padding: 16px;
+}
+.icon {
+    display: flex;
+    cursor: pointer;
+    gap: 16px;
+    font-size: 20px;
+    color: #b10000;
+}
+.icon :first-child {
+    color: #27ae60;
 }
 .btn {
     padding: 12px 24px;
@@ -63,5 +73,13 @@ body {
     outline: none;
     border: none;
     font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.btn:hover {
+    background: none;
+    border: 1px solid #fff;
+    outline: none;
+    color: #fff;
 }
 
